--- a/index.html
+++ b/index.html
@@ -15,12 +15,123 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img src="./images/Logo.svg" alt="logo" class="header__logo" />
+      </header>
       <main class="content">
-        <section class="profile"></section>
-        <section class="cards"></section>
+        <section class="profile">
+          <div class="profile__container">
+            <img
+              src="./images/avatar.jpg"
+              class="profile__image"
+              alt="Bessie-Coleman"
+            />
+            <div class="profile__text">
+              <div class="profile__header">
+                <div class="profile__name">Bessie Coleman</div>
+                <div class="profile__description">Civil Aviator</div>
+              </div>
+              <button class="profile__edit-button">
+                <img
+                  src="./images/Edit Icon.png"
+                  class="profile__edit-button profile__edit-button_icon"
+                />
+                Edit Profile
+              </button>
+            </div>
+          </div>
+          <button class="profile__post-button">
+            <img
+              src="./images/Plus icon.png"
+              class="profile__post-button profile__post-button_icon"
+            />
+            New Post
+          </button>
+        </section>
+        <section class="cards">
+          <div class="card__container">
+            <img
+              src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+              alt="icy resort"
+              class="card__image"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">Val Thorens</div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="card__container">
+            <img
+              src="./images/2-photo-by-ceiline-from-pexels.jpg"
+              alt="street view cafe"
+              class="card__image"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">Restaurant terrace</div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="card__container">
+            <img
+              src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+              alt="outdoor eating"
+              class="card__image"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">An outdoor cafe</div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="card__container">
+            <img
+              src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+              alt="long bridge"
+              class="card__image"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">
+                A verry long bridge, over the forest...
+              </div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="card__container">
+            <img
+              src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+              alt="Hallway"
+              class="card__image"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">Tunnel with morning light</div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="card__container">
+            <img
+              src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+              class="card__image"
+              alt="cabin"
+            />
+            <div class="card__description-wrap">
+              <div class="card__description">Mountain house</div>
+              <button class="card__like-button">
+                <img src="./images/Like Icon.png" class="card__like-icon" />
+              </button>
+            </div>
+          </div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">2026 &copy; SugarSpunStars</footer>
     </div>
   </body>
 </html>
