--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <img
                 alt="pencil"
                 src="./images/Edit-Icon.png"
-                class="profile__edit-button_icon"
+                class="profile__edit-icon"
               />
               Edit Profile
             </button>
@@ -42,7 +42,7 @@
             <img
               alt="plus"
               src="./images/Plus-icon.png"
-              class="profile__post-button_icon"
+              class="profile__post-icon"
             />
             New Post
           </button>
