--- a/index.html
+++ b/index.html
@@ -28,20 +28,30 @@
           <div class="profile__text">
             <h1 class="profile__header">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button type="button" class="profile__edit-button">
+            <button
+              type="button"
+              aria-label="edit this profile"
+              class="profile__edit-button"
+            >
               <img
-                alt="pencil"
-                src="./images/Edit-Icon.png"
+                alt=""
+                aria-hidden="true"
+                src="./images/Edit-Icon.svg"
                 class="profile__edit-icon"
               />
               Edit Profile
             </button>
           </div>
 
-          <button type="button" class="profile__post-button">
+          <button
+            type="button"
+            aria-label="Make new post"
+            class="profile__post-button"
+          >
             <img
-              alt="plus"
-              src="./images/Plus-icon.png"
+              alt=""
+              aria-hidden="true"
+              src="./images/Plus-icon.svg"
               class="profile__post-icon"
             />
             New Post
@@ -56,9 +66,13 @@
             />
             <div class="card__description-wrap">
               <h2 class="card__description">Val Thorens</h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -73,9 +87,13 @@
             />
             <div class="card__description-wrap">
               <h2 class="card__description">Restaurant terrace</h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -90,9 +108,13 @@
             />
             <div class="card__description-wrap">
               <h2 class="card__description">An outdoor cafe</h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -109,9 +131,13 @@
               <h2 class="card__description">
                 A verry long bridge, over the forest...
               </h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -126,9 +152,13 @@
             />
             <div class="card__description-wrap">
               <h2 class="card__description">Tunnel with morning light</h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -143,9 +173,13 @@
             />
             <div class="card__description-wrap">
               <h2 class="card__description">Mountain house</h2>
-              <button type="button" class="card__like-button">
+              <button
+                type="button"
+                aria-label="Like this post"
+                class="card__like-button"
+              >
                 <img
-                  src="./images/Like-Icon.png"
+                  src="./images/Like-Icon.svg"
                   alt="heart"
                   class="card__like-icon"
                 />
@@ -154,7 +188,9 @@
           </div>
         </section>
       </main>
-      <footer class="footer">2026 &copy; SugarSpunStars</footer>
+      <footer class="footer">
+        <p class="footer__copyright">2026 &copy; SugarSpunStars</p>
+      </footer>
     </div>
   </body>
 </html>
