--- a/index.html
+++ b/index.html
@@ -58,134 +58,136 @@
           </button>
         </section>
         <section class="cards">
-          <div class="card">
-            <img
-              src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-              alt="icy resort"
-              class="card__image"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">Val Thorens</h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="./images/2-photo-by-ceiline-from-pexels.jpg"
-              alt="street view cafe"
-              class="card__image"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">Restaurant terrace</h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-              alt="outdoor eating"
-              class="card__image"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">An outdoor cafe</h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-              alt="long bridge"
-              class="card__image"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">
-                A verry long bridge, over the forest...
-              </h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-              alt="Hallway"
-              class="card__image"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">Tunnel with morning light</h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
-          <div class="card">
-            <img
-              src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
-              class="card__image"
-              alt="cabin"
-            />
-            <div class="card__description-wrap">
-              <h2 class="card__description">Mountain house</h2>
-              <button
-                type="button"
-                aria-label="Like this post"
-                class="card__like-button"
-              >
-                <img
-                  src="./images/Like-Icon.svg"
-                  alt="heart"
-                  class="card__like-icon"
-                />
-              </button>
-            </div>
-          </div>
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+                alt="icy resort"
+                class="card__image"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">Val Thorens</h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/2-photo-by-ceiline-from-pexels.jpg"
+                alt="street view cafe"
+                class="card__image"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">Restaurant terrace</h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+                alt="outdoor eating"
+                class="card__image"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">An outdoor cafe</h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
+                alt="long bridge"
+                class="card__image"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">
+                  A verry long bridge, over the forest...
+                </h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+                alt="Hallway"
+                class="card__image"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">Tunnel with morning light</h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                class="card__image"
+                alt="cabin"
+              />
+              <div class="card__description-wrap">
+                <h2 class="card__description">Mountain house</h2>
+                <button
+                  type="button"
+                  aria-label="Like this post"
+                  class="card__like-button"
+                >
+                  <img
+                    src="./images/Like-Icon.svg"
+                    alt="heart"
+                    class="card__like-icon"
+                  />
+                </button>
+              </div>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
